tests/chapter_18/invalid_types/invalid_struct_declaration/duplicate_struct_declaration.c
int main(void) {
    struct x {
        int x;
    };
    struct x {
        int y;
    };
    return 0;
}